--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
   rev: v3.1.0
 - hooks:
   - args:
-    - --config=tox.ini
+    - --config=setup.cfg
     id: flake8
   repo: https://gitlab.com/pycqa/flake8
   rev: 3.8.3
